# hpc-resource-provisioner

./: .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE.txt  README.md  create_users.py  lambda_function_creator.py  lambda_function_provisioner.py  pcluster_manager.py  provisioner_main.py  pyproject.toml  requirements.txt  sandbox.sh
.github/workflows/: release-scripts.yaml  release.yaml  test.yaml
aws/: Dockerfile  lambda_function_provisioner.py  requirements.txt
aws/hpc_provisioner/: pyproject.toml
aws/hpc_provisioner/src/hpc_provisioner/: __init__.py  aws_queries.py  constants.py  dynamodb_actions.py  handlers.py  logging_config.py  yaml_loader.py
aws/hpc_provisioner/src/hpc_provisioner/config/: _head_node.tpl.yaml  _slurm_queues.tpl.yaml  compute_cluster.tpl.yaml
aws/hpc_provisioner/tests/: data.json  test_aws_queries.py  test_dynamodb_actions.py
aws/provisioner_scripts/: 80_cloudwatch_agent_config_prolog.sh  create_users.py  environment.sh
aws/user_scripts/: cluster_status.sh  cluster_up.sh
config/: _head_node.tpl.yaml  _lutre-storage.tpl.yaml  _slurm_queues.tpl.yaml  compute-cluster.tpl.yaml  compute_cluster.tpl.yaml
container/: Dockerfile
deployment/: main.tf  sandbox.tfvars  variables.tf
deployment/lambda_package/: hpc_provisioner  lambda_policy.json  provisioner_handlers.py
hpc_provisioner/: __init__.py  commands.py  handlers.py  pcluster_manager.py  provisioner_main.py  pyproject.toml  yaml_loader.py
hpc_provisioner/config/: _head_node.tpl.yaml
hpc_provisioner/src/hpc_provisioner/: aws_queries.py  cluster.py  commands.py  constants.py  dynamodb_actions.py  handlers.py  pcluster_manager.py  utils.py
hpc_provisioner/src/hpc_provisioner/config/: _head_node.tpl.yaml  _lustre_storage.tpl.yaml  _slurm_queues.tpl.yaml  compute_cluster.tpl.yaml
hpc_provisioner/src/hpc_provisioner/config-dev/: _efs_scratch.tpl.yaml  _efs_storage.tpl.yaml  _head_node.tpl.yaml  _lustre_storage.tpl.yaml  _slurm_queues.tpl.yaml  compute_cluster.tpl.yaml
hpc_provisioner/tests/: conftest.py  data.json  test_aws_queries.py  test_dynamodb_actions.py  test_resource_provisioner.py
patches/: common.py  entrypoint.py  middleware.py  model.py
provisioner_scripts/: 80_cloudwatch_agent_config_prolog.sh  create_users.py  dev_create_users.py  environment.sh  grafana_dashboard.py
provisioner_scripts/headnode/: 80_cloudwatch_agent_config_prolog.sh
user_scripts/: cluster_down.sh  cluster_list.sh  cluster_status.sh  cluster_up.sh  grafana_dashboard.py
