[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc_provisioner"
version = "0.5.9.0"
dependencies = [
    "aws-parallelcluster",
    "boto3",
    "PyYAML"
]
authors = [{"name" = "Fernando Pereira", "email" = "fernando.pereira@epfl.ch"},
           {"name" = "Erik Heeren", "email","erik.heeren@epfl.ch"}]
maintainers = [{"name" = "Fernando Pereira", "email" = "fernando.pereira@epfl.ch"},
               {"name" = "Erik Heeren", "email","erik.heeren@epfl.ch"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.scripts]
hpc-provisioner = "hpc_provisioner.commands:hpc_provisioner"

[project.urls]
Homepage = "https://bbpgitlab.epfl.ch/hpc/hpc-resource-provisioner"
Repository = "https://bbpgitlab.epfl.ch/hpc/hpc-resource-provisioner.git"

[tool.setuptools.package-data]
hpc_provisioner = ["config/*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E",  # pycodestyle
		  "F",  # pyflakes
          "I",  # isort
          "PL",  # pylint
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-vv", "--disable-warnings", "--cov=hpc_provisioner/src", "--cov-report", "term", "--cov-report", "xml:coverage.xml", "--junitxml", "unittests.xml"]
