[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc_provisioner"
dependencies = [
    "aws-parallelcluster",
    "boto3",
    "cryptography",
    "python_dynamodb_lock",
    "PyYAML"
]
authors = [{"name" = "Fernando Pereira", "email" = "fernando.pereira@epfl.ch"},
           {"name" = "Erik Heeren", "email" = "erik.heeren@epfl.ch"}]
maintainers = [{"name" = "Fernando Pereira", "email" = "fernando.pereira@epfl.ch"},
               {"name" = "Erik Heeren", "email" = "erik.heeren@epfl.ch"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]

[tool.setuptools_scm]
version_file = "_version.py"
local_scheme = "no-local-version"
relative_to = "pyproject.toml"
root = ".."

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-env"]

[project.scripts]
hpc-provisioner = "hpc_provisioner.commands:hpc_provisioner"

[project.urls]
Homepage = "https://bbpgitlab.epfl.ch/hpc/hpc-resource-provisioner"
Repository = "https://bbpgitlab.epfl.ch/hpc/hpc-resource-provisioner.git"

[tool.setuptools.package-data]
hpc_provisioner = ["config/*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E",  # pycodestyle
		  "F",  # pyflakes
          "I",  # isort
          "PL",  # pylint
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-vv", "--disable-warnings", "--cov=hpc_provisioner/src", "--cov-report", "term", "--cov-report", "xml:coverage.xml", "--junitxml", "unittests.xml"]

[tool.pytest_env]
SBO_NEXUSDATA_BUCKET = "s3://sbonexusdata-test"
CONTAINERS_BUCKET = "s3://sboinfrastructureassets-test/containers"
SCRATCH_BUCKET = "s3://scratch-test"
EFA_SG_ID = "sg-123456789"
FSX_POLICY_ARN = "arn:aws:iam::123456:policy/fsx_policy"
SUFFIX = "dev"
FS_SUBNET_IDS = '["subnet-1234"]'
FS_SG_ID = "sg-123456789"
EVENTBRIDGE_ROLE_ARN = "arn:eventbridge_role"
API_GW_STAGE_ARN = "arn:api_gw_stage"
